# api.rss.navydev.top

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.py
.github/workflows/: ci.yml  deploy.yml
app/: extentions.py  main.py  tracer.py
app/models/: rss.py
app/routes/: rss.py  visit.py
app/schemas/: rss.py
app/services/: database.py
celery_app/: constants.py
celery_app/tasks/: rss_crawler.py
config/nginx/: proxy_params.conf
config/nginx/conf.d/: rss.swagger.conf
scripts/: docker-run.sh  local-otel-run.sh  local-run.sh  make-test.sh  start-celery-beat.sh  start-celery-worker.sh  start-web.sh
tests/: conftest.py  test_whoami.py
tests/celery_app/: conftest.py  test_rss_crawler.py
tests/data/cassettes/: test_enhence_articles_case1.yaml  test_rss_subscribe_flow.yaml  test_validator.yaml
tests/rss/: conftest.py  test_rss.py
tests/user/: conftest.py
